--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,24 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+<!doctype html>
+<html lang="cs">
+<head>
+  <meta charset="utf-8">
+  <title>{% block title %}BabyBeBare App{% endblock %}</title>
+  <meta name="author" content="Jan Sonbol">
+  <meta name="description" content="{% block meta_desc %}{% endblock %}">
+  <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+  {# pokud používáš jQuery jako v původním souboru #}
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" crossorigin="anonymous"></script>
+</head>
+<body>
+  <header>
+    <h1>BabyBeBare App</h1>
+    {% include 'partials/navigation.html.twig' %}
+  </header>
+  <main>{% block body %}{% endblock %}</main>
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+  {% block javascripts %}
+    {{ vite_entry_script_tags('app') }}
+    {{ vite_entry_script_tags('app') }}
+  {% endblock %}
+</body>
 </html>
