--- a/templates/partials/navigation.html.twig
+++ b/templates/partials/navigation.html.twig
@@ -22,6 +22,8 @@
       <ul>
         <li><a id="baagl-shoptet" data-source="baagl" href="#">Baagl → Shoptet</a></li>
         <li><a id="update-shoptet" data-source="update" href="#">Update Shoptetu</a></li>
+        <li><a href="{{ path('inbound_shoptet') }}">Naskladnění na Shoptet</a></li>
+        <li><a id="missing-shoptet" data-source="missing" href="#">Dohrání produktu</a></li>
       </ul>
     </li>
   </ul>
